force-app/main/default/objects/Activity/fields/Is_Sequence_Call__c.field-meta.xml
<CustomField>
    <fullName>Is_Sequence_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Task as a cadence-generated call, for robust engine detection. (R9)</description>
    <label>Is Sequence Call</label>
    <type>Checkbox</type>
</CustomField>