force-app/main/default/objects/Activity/fields/Sequence_Step__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Step__c</fullName>
    <description>Which cadence call number (1-10) this Task represents. (R10)</description>
    <label>Sequence Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>