force-app/main/default/objects/Activity/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Target__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>